[project]
name = "patronus-mcp-server"
version = "0.1.0"
description = "Patronus MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.2",
    "mcp[cli]>=1.4.1",
    "patronus>=0.1.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto" 
