[project]
name = "patronus-mcp-server"
version = "0.1.0"
description = "Patronus MCP Server"
authors = [
    { name = "Anand Kannappan", email = "anand@patronus.ai" }
]
dependencies = [
    "httpx>=0.27.2",
    "mcp[cli]>=1.4.1",
    "pandas>=2.2.3",
    "patronus>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patronus_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto" 
